# bomberman-rust-tournament

./: .gitignore  AI_PERFORMANCE_ANALYSIS.md  BOT_CLONING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  run.bat  runWeb.bat
backend/: Cargo.toml
backend/src/: main.rs  router.rs
backend/src/handlers/: hello_world.rs  mod.rs  tournament.rs
benches/: perform_move_benchmark.rs  tournament_benchmark.rs
bots/: Cargo.toml  build.rs
bots/src/: lib.rs
bots/src/bot/: cuddle_bot.rs  easy_bot.rs  fuzzy_bot.rs  gerhard_bot.rs  gz_bot.rs  ml_bot.rs  mod.rs  neural_bot.rs  old_school.rs  passive_bot.rs  random_bot.rs  scout_bot.rs  template_bot.rs
bots/src/bot/fuzzy_logic/: fuzzy_ai.rs  fuzzy_core.rs  fuzzy_input.rs  fuzzy_movement.rs  helper.rs  manhattan.rs  mod.rs
bots/src/bot/gz_logic/: helper.rs  mod.rs  tile.rs  tilemap.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: bot_cloning.rs
game/: Cargo.toml
game/src/: coord.rs  lib.rs
game/src/bot/: bot.rs  bot_data.rs  mod.rs
game/src/game/: bomb_processor.rs  game.rs  game_result.rs  mod.rs  replay_engine.rs
game/src/map/: bomb.rs  cell.rs  display.rs  map.rs  mod.rs  player.rs  shrink.rs
game/src/map/commands/: move_action.rs  move_down.rs  move_left.rs  move_right.rs  move_up.rs  place_bomb.rs  wait.rs
game/src/map/commands/traits/: mod.rs  player_command.rs
game/src/map/enums/: command.rs
game/src/map/factories/: command_factory.rs  grid_factory.rs
game/src/map/grid/: grid.rs  mod.rs
game/src/map/structs/: map_config.rs
game/src/map/validators/map_validator/: map_validator_chain_factory.rs  map_validator_node.rs  mod.rs
game/src/map/validators/map_validator/traits/: mod.rs
game/src/map/validators/map_validator/validator/: map_size_validator.rs  mod.rs  player_count_validator.rs
gui/: Cargo.toml  Trunk.toml  index.html  package-lock.json
gui/src/: app.rs  game.rs  home.rs  lib.rs  main.rs  tournament_view.rs  tournament_worker.rs
gui/src/components/: bot_selector.rs  grid.rs  mod.rs  run_game_result.rs  start_game_link.rs  start_tournament_link.rs  tile.rs
src/: bot.rs  coord.rs  game.rs  lib.rs  main.rs  map.rs  shrink.rs  tournament.rs
src/bot/: cuddle_bot.rs  easy_bot.rs  gerhard.rs  gerhard_bot.rs  i_am_the_danger_bot.rs  ml_bot.rs  mod.rs  passive_bot.rs  random_bot.rs  scout_bot.rs
src/bot/fuzzy_bot/: fuzzy_bot.rs  mod.rs
src/bot/fuzzy_bot/fuzzy_logic/: fuzzy_ai.rs  fuzzy_core.rs  fuzzy_input.rs  fuzzy_movement.rs  helper.rs  manhattan.rs  mod.rs
src/bot/fuzzy_bot/fuzzy_logic/fuzzy_movement/: decide_direction.rs  mod.rs  movement_input.rs
src/game/: bomb_processor.rs  game.rs  game_progress.rs  game_result.rs  gameresult.rs  map_settings.rs  mod.rs  process_explosion.rs
src/map/: bomb.rs  cell.rs  display.rs  map.rs  mod.rs  player.rs
src/map/commands/: mod.rs  move_action.rs  move_down.rs  move_left.rs  move_right.rs  move_up.rs  place_bomb.rs  wait.rs
src/map/factories/: mod.rs
src/map/validators/: map_validator_chain_factory.rs  map_validator_node.rs  mod.rs
src/map/validators/map_validator/: map_validator_chain_factory.rs
src/map/validators/map_validator/validator/: map_size_validator.rs  player_count_validator.rs
src/map/validators/traits/: map_validator.rs
src/map/validators/validator/: map_size_validator.rs  player_count_validator.rs
tests/: game_integration.rs
tournament/: Cargo.toml
tournament/benches/: tournament_benchmark.rs
tournament/src/: lib.rs  main.rs  tournament.rs  tournament_result.rs
tournament/src/factories/: game_config_factory.rs  mod.rs
tournament/tests/: game_integration.rs
web/: Cargo.toml  Trunk.toml  index.html  package-lock.json
web/src/: app.rs  home.rs  lib.rs  main.rs
web/src/pages/: mod.rs
web/src/pages/game/: game_config_page.rs  game_run_page.rs  mod.rs
web/src/pages/home/: home_page.rs  mod.rs  speech_bubble.rs  speech_texts.rs
web/src/pages/tournament/: mod.rs  tournament_page.rs
web/src/server/: execute_tournament.rs  mod.rs
web/src/shared_components/: bomberman_logo.rs  bot_selector.rs  link.rs  map_size_selector.rs  mod.rs
web/src/shared_components/game_runner/: grid.rs  loading.rs  mod.rs  player_icon.rs  player_section.rs  round_control_buttons.rs  run_game_result.rs  speed_control.rs  tile.rs
