[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tournament = {path = "../tournament"}
bots = { path = "../bots" }
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
num_cpus = "1.17.0"
tower-http = { version = "0.6.6", features = ["cors"] }
