[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../game" }   # depends on the game library crate
bots = { path = "../bots" }   # depends on the bot library crate
num_cpus = "1.17"             # optional, for thread count detection
rand = "0.9.2"
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
serde_json = "1.0.145"
js-sys = "0.3"
serde = { version = "1.0.228", features = ["derive"] }

[[bench]]
name = "tournament_benchmark"
harness = false

[dev-dependencies]
criterion = "0.7"

[[bin]]
name = "runner"
path = "src/main.rs"
