[package]
name = "tournament"
version = "0.1.0"
edition = "2024"

[dependencies]
game = { path = "../game" }   # depends on the game library crate
bots = { path = "../bots" }   # depends on the bot library crate
rand = "0.9.2"
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
serde_json = "1.0.145"
js-sys = "0.3"
serde = { version = "1.0.228", features = ["derive"] }

[[bench]]
name = "tournament_benchmark"
harness = false

[dev-dependencies]
criterion = "0.7"
