[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
tournament = {path = "../tournament"}
bots = { path = "../bots" }
game = { path = "../game" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.12", default-features = false,  features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.55"
rand = "0.9.2"
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
gloo-net = "0.6.0"
